--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <!-- Parent POM: Inherits from Spring Boot's starter parent for dependency management -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.4.1</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
+    <!-- Project metadata -->
     <groupId>se.biplob</groupId>
     <artifactId>ProjectUppgift2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -29,47 +31,53 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+    <!-- Dependencies for all the libraries and frameworks required for the project -->
     <dependencies>
+        <!-- Dependency of Spring boot starter data jpa for supporting Java Persistence API -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <!-- Dependency of Spring boot starter security for authentication and authorization -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <!-- Dependency of Spring boot starter for enabling Thymeleaf templating used for server-side HTML resource rendering -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <!-- Spring boot starter for web provides support for building web applications -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- Thymeleaf Extras for Spring Security used for integrating thymeleaf and security -->
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity6</artifactId>
         </dependency>
-
+        <!-- Dependency for HSQL database -->
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <!-- Spring boot starter for testing  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Dependency provides support for testing Spring Security configurations -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Spring Boot DevTools that support automatic restart and live reload during development -->
         <dependency>
-            <!--the spring-boot-devtools dependency enables automatic restart and live reload features so whenever
-             you make changes to the project, Spring Boot will automatically restart the application and refresh the
-             browser – making your development experience more convenient.-->
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
@@ -79,6 +87,7 @@
 
     <build>
         <plugins>
+            <!-- Spring Boot Maven Plugin that packages the application as an executable JAR file -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
