--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        <!-- in memory database dependency for testing purpose-->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
